2.1.0/_sources/gallery/mplot3d/wire3d.rst.txt


.. _sphx_glr_gallery_mplot3d_wire3d.py:


=================
3D wireframe plot
=================

A very basic demonstration of a wireframe plot.




.. image:: /gallery/mplot3d/images/sphx_glr_wire3d_001.png
    :align: center





.. code-block:: python


    from mpl_toolkits.mplot3d import axes3d
    import matplotlib.pyplot as plt


    fig = plt.figure()
    ax = fig.add_subplot(111, projection='3d')

    # Grab some test data.
    X, Y, Z = axes3d.get_test_data(0.05)

    # Plot a basic wireframe.
    ax.plot_wireframe(X, Y, Z, rstride=10, cstride=10)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.014 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: wire3d.py <wire3d.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: wire3d.ipynb <wire3d.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
